# MouseBehaviour

./: .gitignore  .travis.yml  .travis_build.sh  404.html  CMakeLists.txt  Makefile.arduino  Makefile.arduino.in  README.md  blinky.py  bootstrap.sh  camera_arduino_client.py.in  canvas.py  copy_file.sh.in  gui.py  index.html  launch_me.py  methods.py  mkdocs.yml  requirements.txt  run.sh.in  search.html  sitemap.xml
Arduino/: RotaryEncoder.h  Shocker.h  callback.h  config.h  config.h.in  main.ino  methods.h  protocol.h  test.ino
CAD/: .gitattributes  HrishiShockingProtocol.pro  README.md  SSR_4CH.sch  Schematic-cache.lib  Schematic.bak  Schematic.pro  Schematic.sch  StimIsolator.sch  _autosave-Schematic.sch
CAD/EDA/: AnimalBehaviour.dsn  AnimalBehaviour.kicad_pcb  AnimalBehaviour.net  AnimalBehaviour.pro  AnimalBehaviour.sch  AnimalBehaviour.ses  AnimalBehaviour.xml  BhallaLabComponents.lib  MD-60SM.lib  MD-60SM.mod  Makefile  fp-lib-table  generate_pcb.py  sym-lib-table
CAD/EDA/3DModels/: CUI_SJ1-3533NG.step  CUI_TB001-500-02BE.step
CAD/EDA/MD-60SM.pretty/: CUI_MD-60SM.kicad_mod
CAD/KiCAD/: AnimalBehaviour-cache.lib  AnimalBehaviour.bak  AnimalBehaviour.dsn  AnimalBehaviour.kicad_pcb  AnimalBehaviour.net  AnimalBehaviour.pro  AnimalBehaviour.sch  BhallaLabComponents.lib  DoraBabu.lib  HOWTO.md  PCB_20190705.kicad_pcb  SSR_4CH.sch  Schematic-cache.lib  Schematic.bak  Schematic.kicad_pcb  Schematic.sch  fp-info-cache  fp-lib-table  sym-lib-table
CAD/KiCAD/AnimalBehaviour/: 4ChannelSSR.kicad_mod
CAD/KiCAD/Archive/: BhallaLabComponents.bck  HrishiShockingProtocol.pro  Schematic.bak  StimIsolator.sch
CAD/KiCAD/BhallaLab.pretty/: Connector_Mini-DIN_Female_6Pin_2rows.kicad_mod
CAD/KiCAD/PreviousVersion/: ArduinoEncoderShield.LMD  ArduinoEncoderShield.LMD.rep  ArduinoEncoderShield.cam  ArduinoEncoderShield_old-B_Cu.gbl  ArduinoEncoderShield_old-B_SilkS.gbo  ArduinoEncoderShield_old-Edge_Cuts.gbr  ArduinoEncoderShield_old-F_Cu.gtl  ArduinoEncoderShield_old-F_SilkS.gto  ArduinoEncoderShield_old-cache.lib  ArduinoEncoderShield_old.cmp  ArduinoEncoderShield_old.drl  ArduinoEncoderShield_old.kicad_pcb  ArduinoEncoderShield_old.kicad_pcb-bak  ArduinoEncoderShield_old.net  ArduinoEncoderShield_old.pro  ArduinoEncoderShield_old.sch  ArduinoEncoderShield_oldcam.LMD  ArduinoEncoderShield_oldcam.LMD.rep  ArduinoEncoderShield_oldcam.cam
CAD/KiCAD/SSR4Channel.pretty/: 4ChannelSSR.kicad_mod
PointGreyCamera/: CMakeLists.txt  config.h
PointGreyCamera/AsyncSerial/: CMakeLists.txt
PointGreyCamera/TimeoutSerial/: CMakeLists.txt  main.cpp
PointGreyCamera/include/: SimpleSerial.h
PointGreyCamera/src/: helper.hh  main.cpp  server.cc  videoio.cpp  videoio.h
Protocols/: BehaviourProtocols.csv  BehaviourProtocols.xlsx  BehaviourProtocols.yml  Makefile  plot_protocol.py  protocol_to_config.py
Tests/ArduinoPulseGen/: Makefile  README.md
Tests/ArduinoPulseGen/src/: main.ino
analysis/: Makefile  README.md  abf2csv.py  abf2other.py  analyze_trial.py  analyze_trial_video.py  area_n_points.py  ear_twitch_in_trial.py  find_latency.py  get_data_line_from_tiff.py  plot_trial.py  read_tiff.py  requirements.txt
build_pipeline/: index.html
classifiers/: mouse_eye.xml
config/: get_serial_ports.py
docker/: Dockerfile  Makefile  Makefile.NOPROXY  index.html  install_docker_ubuntu.sh  requirements.txt  run_docker.sh  setup_venv.sh
docs/: build_pipeline.md  docker.md  eda.md  gui.md  index.md  run_pipeline.md
eda/: index.html
gui/: index.html
pyblink/: arduino.py  config.py
run_pipeline/: index.html
scripts/: bootstrap.sh  camera_reset.sh  gen_docs.sh  generate_flow_chart.sh  reset_board
search/: search_index.json
spinnaker-2.0.0.147-amd64/: README  install_spinnaker.sh  libspinnaker-c-dev_2.0.0.147_amd64.deb  libspinnaker-c_2.0.0.147_amd64.deb  libspinnaker-dev_2.0.0.147_amd64.deb  libspinvideo-c-dev_2.0.0.147_amd64.deb  libspinvideo-c_2.0.0.147_amd64.deb  libspinvideo-dev_2.0.0.147_amd64.deb  libspinvideo_2.0.0.147_amd64.deb  remove_spinnaker.sh  spinupdate-dev_2.0.0.147_amd64.deb  spinupdate_2.0.0.147_amd64.deb  spinview-qt-dev_2.0.0.147_amd64.deb
src/: RotaryEncoder.h  Shocker.h  config.h  config.h.in  main.ino  paw3_upi.cpp  protocol.h
